--- a/index.html
+++ b/index.html
@@ -316,11 +316,11 @@
         <hr/>
         <div class="contact-info">
           <p class="contact-title">Contact US</p>
-          <p class="contact-number">1880-9659-6469</p>
+          <p class="contact-number"> 96548 03967</p>
         </div>
         <div class="chat-info">
           <p class="contact-title">Chat With Us</p>
-          <p class="contact-number">1880-9659-6469</p>
+          <p class="contact-number"> 96548 03967</p>
         </div>
       </div>
 <div class="line">
